@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-23T16:24:51Z",
-  "count_outdated" : 1770,
-  "uniques_outdated" : 328,
-  "count" : 1817,
-  "uniques" : 357,
+  "timestamp" : "2022-04-24T01:22:35Z",
+  "count_outdated" : 1777,
+  "uniques_outdated" : 333,
+  "count" : 1818,
+  "uniques" : 358,
   "clones" : [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 1, 7 ],
-      "uniques": 4,
-      "uniques_minmax": [ 1, 5 ]
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
