@@ -1,12 +1,7 @@
 {
-  "count": 47,
-  "uniques": 17,
+  "count": 41,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-04-09T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-04-10T00:00:00Z",
       "count": 1,
